--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.14",
+    "lodash-es": "^4.17.14",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
     "react": "16.8.0",
