--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "ajv": "^5.5.2",
-    "autoprefixer": "^9.1.0",
+    "autoprefixer": "^9.7.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -48,19 +48,19 @@
     "braces": "^3.0.2",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.5.2",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "css-loader": "^1.0.0",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.17.0",
     "express": "^4.16.3",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "lodash": "^4.17.14",
-    "lodash-es": "^4.17.14",
-    "node-sass": "^4.9.2",
+    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
+    "node-sass": "^4.13.0",
     "postcss-loader": "^2.1.6",
     "react": "16.8.0",
     "react-dom": "16.8.0",
@@ -68,15 +68,16 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
-    "redux-form": "^8.2.3",
-    "sass-loader": "^7.1.0",
+    "redux-form": "^8.2.6",
+    "sass-loader": "^7.3.1",
+    "serialize-javascript": "^2.1.2",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.3.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.9.0",
     "webpack-hot-middleware": "^2.22.3",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
